[package]
name = "nol"
version = "0.3.0"
edition = "2021"
description = "A simply program to write test in executable"
license = "GPL-2.0-or-later"
repository = "https://github.com/taishingi/zuu/tree/master/nol"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eywa =  {path = "../eywa" , version = "0.1.7" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
colored_truecolor = "0.1.0"
